# game

./: .gitignore  CMakeLists.txt  DevkitPpcWii.cmake  build_all.sh
assets/: CMakeLists.txt  game.rsf
assets/imgs/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  vshader.v.pica
cmake/: FindCTRULIB.cmake  FindLIBOGC.cmake  MakeTargetDirs.cmake  Tools.cmake  ToolsWii.cmake
include/: gpu.hpp  init.hpp  os.hpp  paths.hpp  png.hpp  trim.hpp  vec.hpp
src/: main.cpp  png.cpp  vec.cpp
src_3ds/: gpu.cpp  init.cpp  path.cpp
src_pc/: gpu.cpp  init.cpp  path.cpp
src_wii/: gpu.cpp  init.cpp  path.cpp
