cmake_minimum_required(VERSION 3.6)
project(fangame)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_BUILD_TYPE Debug)
set(APP_VERSION_MAJOR 0)
set(APP_VERSION_MINOR 1)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(APP_TARGET game)

file(GLOB_RECURSE SRCS_COMMON src/*.cpp)
file(GLOB_RECURSE SRCS_PC src-pc/*.cpp)
file(GLOB_RECURSE SRCS_3DS src-3ds/*.cpp)
file(GLOB_RECURSE SRCS_WII src-wii/*.cpp)

if(3DS)
    set(SRCS ${SRCS_COMMON} ${SRCS_3DS})
    find_package(libctru REQUIRED)
    include_directories(${LIBCTRU_INCLUDE_DIRS})
elseif(WII)
    set(SRCS ${SRCS_COMMON} ${SRCS_WII})
    find_package(libogc REQUIRED)
    include_directories(${LIBOGC_INCLUDE_DIRS})
else()
    set(SRCS ${SRCS_COMMON} ${SRCS_PC})
    find_package(glfw3 REQUIRED)
    include_directories(${GLFW_INCLUDE_DIRS})
    find_package(OpenGL REQUIRED)
    include_directories(${OPENGL_INCLUDE_DIRS})
    find_package(GLEW REQUIRED)
    include_directories(${GLEW_INCLUDE_DIRS})
endif()

find_package(PythonInterp 3 REQUIRED)

add_executable(${APP_TARGET} ${SRCS})

if(3DS)
    target_link_libraries(${APP_TARGET} ${LIBCTRU_LIBRARIES})
elseif(WII)
    target_link_libraries(${APP_TARGET} ${LIBOGC_LIBRARIES})
else()
    target_link_libraries(${APP_TARGET} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
endif()

add_subdirectory(assets)
